--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
+    "@binssoft/ngx-captcha": "^1.3.0",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@popperjs/core": "^2.11.6",
     "angular-material": "^1.2.5",
@@ -32,6 +33,7 @@
     "express": "^4.18.1",
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
+    "ngx-loading-x": "^1.0.3",
     "ngx-spinner": "^9.0.1",
     "path": "^0.12.7",
     "rxjs": "~6.5.4",
